force-app/main/default/objects/CurrentInventory__c/CurrentInventory__c.object-meta.xml
<CustomObject>
    <label>現在庫</label>
    <nameField>
        <displayFormat>CIV-{00000000}</displayFormat>
        <label>現在庫名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>