force-app/main/default/objects/CurrentInventory__c/fields/allocatable_quantity__c.field-meta.xml
<CustomField>
    <fullName>allocatable_quantity__c</fullName>
    <label>引当可能数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>