force-app/main/default/objects/CurrentInventory__c/fields/allocated_quantity__c.field-meta.xml
<CustomField>
    <fullName>allocated_quantity__c</fullName>
    <label>引当数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>