force-app/main/default/objects/CurrentInventory__c/fields/calorie__c.field-meta.xml
<CustomField>
    <fullName>calorie__c</fullName>
    <label>カロリー[kcal]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>