force-app/main/default/objects/CurrentInventory__c/fields/food_type_l2__c.field-meta.xml
<CustomField>
    <fullName>food_type_l2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>食品分類 (L2)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.food_type_l1__c</field>
            <operation>equals</operation>
            <valueField>FoodTypeL2__c.food_type_l1__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FoodTypeL2__c</referenceTo>
    <relationshipLabel>現在庫</relationshipLabel>
    <relationshipName>food_type_l2ss</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>