force-app/main/default/objects/CurrentInventory__c/fields/food_type_lOne__c.field-meta.xml
<CustomField>
    <fullName>food_type_lOne__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>食品分類 (L1)</label>
    <referenceTo>FoodTypeLOne__c</referenceTo>
    <relationshipLabel>現在庫</relationshipLabel>
    <relationshipName>food_type_l1ss</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>