force-app/main/default/objects/CurrentInventory__c/fields/JAN_code__c.field-meta.xml
<CustomField>
    <fullName>JAN_code__c</fullName>
    <externalId>true</externalId>
    <label>JANコード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>