force-app/main/default/objects/CurrentInventory__c/fields/Kg_num__c.field-meta.xml
<CustomField>
    <fullName>Kg_num__c</fullName>
    <label>物理的重量[kg]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>