force-app/main/default/objects/CurrentInventory__c/fields/physical_quantity__c.field-meta.xml
<CustomField>
    <fullName>physical_quantity__c</fullName>
    <label>物理的数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>