force-app/main/default/objects/CurrentInventory__c/fields/product_name__c.field-meta.xml
<CustomField>
    <fullName>product_name__c</fullName>
    <label>商品名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>