force-app/main/default/objects/CurrentInventory__c/fields/syoumi_num__c.field-meta.xml
<CustomField>
    <fullName>syoumi_num__c</fullName>
    <label>賞味期限間近[数量]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>