force-app/main/default/objects/CurrentInventory__c/fields/unique_key__c.field-meta.xml
<CustomField>
    <fullName>unique_key__c</fullName>
    <formula>warehouse__r.Id &amp;":"&amp;  food_type_lOne__r.Id &amp;":"&amp;  food_type_lTwo__r.Id &amp;":"&amp;  JAN_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>unique_key</label>
    <type>Text</type>
</CustomField>