force-app/main/default/objects/CurrentInventory__c/fields/warehouse__c.field-meta.xml
<CustomField>
    <fullName>warehouse__c</fullName>
    <label>倉庫</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>現在庫</relationshipLabel>
    <relationshipName>current_inventories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>