force-app/main/default/objects/CurrentInventory__c/validationRules/physical_quantity_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>physical_quantity_validation</fullName>
    <active>true</active>
    <errorConditionFormula>physical_quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>physical_quantity__c</errorDisplayField>
    <errorMessage>現在庫の物理的数量は0以上である必要があります。</errorMessage>
</ValidationRule>